fix(swagger): create request
