# docs/swagger.json
@@ -67,7 +67,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.Account"
+                            "$ref": "#/definitions/dto.CreateAccountRequest"
                         }
                     }
                 ],
@@ -314,6 +314,19 @@
         }
     },
     "definitions": {
+        "dto.CreateAccountRequest": {
+            "type": "object",
+            "properties": {
+                "balance": {
+                    "type": "number",
+                    "example": 1000
+                },
+                "currency": {
+                    "type": "string",
+                    "example": "TMT"
+                }
+            }
+        },
         "dto.TransferRequest": {
             "type": "object",
             "properties": {
@@ -334,39 +347,29 @@
             }
         },
         "entity.Account": {
-            "description": "Банковский счет пользователя",
             "type": "object",
             "properties": {
                 "balance": {
-                    "type": "number",
-                    "format": "double",
-                    "example": 1000.5
+                    "type": "number"
                 },
                 "created_at": {
-                    "type": "string",
-                    "example": "2025-09-09T12:00:00Z"
+                    "type": "string"
                 },
                 "currency": {
-                    "type": "string",
-                    "example": "TMT"
+                    "type": "string"
                 },
                 "deleted_at": {
-                    "type": "string",
-                    "example": "null"
+                    "type": "string"
                 },
                 "id": {
-                    "type": "integer",
-                    "format": "int64",
-                    "example": 1
+                    "type": "integer"
                 },
                 "is_locked": {
-                    "type": "boolean",
-                    "example": false
+                    "type": "boolean"
                 }
             }
         },
         "entity.Transaction": {
-            "description": "Операция по счету",
             "type": "object",
             "properties": {
                 "account_id": {
