# internal/port/rest/handler/dto/request.go
@@ -1,5 +1,9 @@
 package dto // data transfer object
 
+type CreateAccountRequest struct {
+	Balance  float64 `json:"balance" example:"1000.0"`
+	Currency string  `json:"currency" example:"TMT"`
+}
 type DepositRequest struct {
 	Amount float64 `json:"amount"`
 }
